syntax="proto3";

package chat.protobuf.api.chat_service; 

option go_package = "messenger/chat/pkg/api/chat_service"; 

import "google/protobuf/timestamp.proto";

message CreateRequest{
    string chatName = 1;
};

message CreateResponse{
    int64 id = 1;
    string chatName = 2;
};

message DeleteRequest{
    int64 id = 1;
};

message SendMessageRequest{
    int64 chatID = 1;
    string from = 2;
    string text = 3;
};

message SendMessageResponse{
    int64 messageID = 1;
};

message GetMessageRequest{
    int64 id = 1;
};

message GetMessageResponse{
    string chatName = 1;
    string from = 2;
    string text = 3;
    google.protobuf.Timestamp timestamp = 4;
};

